--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "songkick-shoutouts-v2",
   "version": "0.0.1",
   "description": "A way to give people on your team a shoutout!",
-  "main": "index.js",
+  "main": "./src/electron-starter.js",
   "author": "Felix Harrison",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "npm run clean && npm run compile",
     "clean": "rm -rf ./build/index.bundle.js",
-    "compile": "NODE_ENV=production webpack --config ./webpack.config.js --progress"
+    "compile": "NODE_ENV=production webpack --config ./webpack.config.js --progress",
+    "electron": "electron .",
+    "dev": "nf start"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -17,12 +19,34 @@
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
+    "dotenv": "^6.2.0",
+    "electron": "^3.0.2",
+    "foreman": "^3.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "firebase": "^5.5.6",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
-  }
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1",
+    "react-select": "^2.2.0",
+    "react-test-renderer": "^16.5.2",
+    "recompose": "^0.30.0"
+  },
+  "homepage": "./",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "proxy": "http://localhost:3000/"
 }
