--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "dotenv": "^6.2.0",
     "electron": "^3.0.2",
+    "file-loader": "^3.0.1",
     "foreman": "^3.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "firebase": "^5.5.6",
